# ssr-testing

./: Cargo.toml  build.rs  flake.nix
res/: DaySkyHDRI063B_4K.blend  DaySkyHDRI063B_4K.usdc
res/sponza-gltf-main/: .gitattributes  README.md  sponza-avif-hi.glb  sponza-avif-lo.glb
res/sponza-gltf-main/source/: Sponza.gltf
src/: app.rs  camera.rs  instance.rs  light.wgsl  lighting.rs  main.rs  model.rs  render_pipeline.rs  resources.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
