[package]
name = "ssr-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
cgmath = "0.18.0"
env_logger = "0.11.10"
gltf = "1.4.1"
log = "0.4.29"
pollster = "0.4.0"
tobj = { version = "3", default-features = false, features = ["async"] }
wgpu = "29.0.3"
winit = "0.30.13"

[build-dependencies]
anyhow = "1.0.102"
fs_extra = "1.3.0"
glob = "0.3.3"

[dependencies.image]
version = "0.24"
# default-features = false
features = [ "png", "jpeg", "tga", "rayon" ]
